linkerd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commerce-ingress
  namespace: e-commerce
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:$service_port
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: e-commerce.local
    http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 5001
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 5002
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 5003
